# KKZc

./: CMakeLists.txt  KKZc-repo-info.md  README.md
src/: main.cpp
src/api/: CurlInit.h  QuarkApi.cpp  QuarkApi.h
src/gui/: MainFrame.cpp  MainFrame.h  QuarkDirDialog.cpp  QuarkDirDialog.h  VirtualLinkList.cpp  VirtualLinkList.h
src/model/: LinkItem.h  LinkStore.cpp  LinkStore.h
src/worker/: RateLimiter.h  ThreadPool.h  TransferWorker.cpp  TransferWorker.h
